--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@codewithdan/observable-store": "^2.2.11",
+    "@codewithdan/observable-store-extensions": "^2.2.8",
     "class-transformer": "^0.3.1",
     "core-js": "^3.6.5",
     "localforage": "^1.9.0",
