--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@ngrx/effects": "^10.0.0",
     "@ngrx/store": "^10.0.0",
     "class-transformer": "^0.3.1",
     "core-js": "^3.6.5",
