--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "@angular/router": "~10.0.14",
     "@ngrx/effects": "^10.0.0",
     "@ngrx/store": "^10.0.0",
+    "@ngrx/store-devtools": "^10.0.0",
     "class-transformer": "^0.3.1",
     "core-js": "^3.6.5",
     "localforage": "^1.9.0",
+    "ngrx-store-logger": "^0.2.4",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
