--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://github.com/christophercr/angular-state-management#readme",
   "scripts": {
     "ng": "ng",
+    "ngxs": "ngxs",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -35,6 +36,8 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@ngxs/cli": "^2.0.0",
+    "@ngxs/store": "^3.7.0",
     "class-transformer": "^0.3.1",
     "core-js": "^3.6.5",
     "localforage": "^1.9.0",
