--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://github.com/christophercr/angular-state-management#readme",
   "scripts": {
     "ng": "ng",
+    "akita": "akita",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -35,6 +36,8 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@datorama/akita": "^5.2.3",
+    "@datorama/akita-cli": "^6.1.1",
     "class-transformer": "^0.3.1",
     "core-js": "^3.6.5",
     "localforage": "^1.9.0",
@@ -61,5 +64,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
+  },
+  "akitaCli": {
+    "basePath": "./src/app/",
+    "template": "angular"
   }
 }
